# bwg_test

./: .env.example  .gitignore  create_envs.sh  docker-compose.yml  nginx.conf  readme.md
api/: .env.example  Dockerfile  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 2cb691690380_add_crypto_coin.py  8e40e4965387_init.py
api/src/: app.py  db.py  models.py  settings.py
api/src/redis/: connection.py  exceptions.py  structures.py
api/src/redis_utils/: cache.py  connection.py  structures.py
api/src/utils/: time_utils.py
api/src/v1/: courses.py
consumer/: .env.example  pyproject.toml
consumer/src/: binance_consumer.py  coingeko_consumer.py  settings.py
consumer/src/exchange_api_clients/: BinanceApiClient.py  CoinGekoApiClient.py  datastructs.py  exceptions.py  get_api_client.py
consumer/src/rabbitmq/: message.py
consumer/src/redis_utils/: connection.py  exceptions.py  structures.py  utils.py
producer/: .env.example  pyproject.toml
producer/src/: connection.py  message.py  producer.py  settings.py
producer/src/rabbitmq/: message.py
