[tool.poetry]
name = "bwg_test"
version = "0.1.0"
description = ""
authors = ["WeWe-power <84448872+WeWe-power@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
uvicorn = "^0.27.1"
alembic = "^1.13.1"
redis = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
