[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["WeWe-power <84448872+WeWe-power@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
pydantic = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
